hanu-reference/service-mesh/servicemesh-jaeger-resource/Ingress_jaeger.yaml
---
# Source: servicemesh-jaeger-resource/templates/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: dashboard-ahnsk.taco-cat.xyz
      http:
        paths:
        - backend:
            service:
              name: jaeger-operator-jaeger-query
              port:
                number: 16686
          path: /jaeger
          pathType: ImplementationSpecific
  tls:
    - hosts:
      - dashboard-ahnsk.taco-cat.xyz
      secretName: taco-cat-tls
